# 86Box

./: CMakeLists.txt  COPYING
.ci/: AppImageBuilder.yml  Jenkinsfile  build.sh
src/: 86box.c  CMakeLists.txt  config.c  vnc_keymap.c
src/chipset/: via_pipc.c
src/cli/: CMakeLists.txt  cli.c  cli_input.c  cli_monitor.c  cli_render.c
src/cpu/: codegen_x86.h  cpu.c
src/device/: CMakeLists.txt  keyboard.c  keyboard_cli.c  pci_bridge.c  vfio.c
src/disk/: hdc_ide.c  hdd_image.c
src/machine/: CMakeLists.txt  m_amstrad.c  m_at_misc.c  m_at_slot1.c  m_at_slot2.c  m_at_socket370.c  m_at_sockets7.c  m_ps1.c  m_tandy.c  machine_table.c
src/mem/: i2c_eeprom.c  mem.c  rom.c
src/printer/: prt_text.c
src/qt/: qt_mainwindow.cpp  qt_platform.cpp  qt_settingssound.cpp  qt_settingssound.ui  xkbcommon_keyboard.cpp
src/sound/: CMakeLists.txt  midi_fluidsynth.c  midi_mt32.c  midi_opl4.c  openal.c  snd_ac97_codec.c  snd_ac97_via.c  snd_audiopci.c  snd_cmi8x38.c  snd_cs423x.c  snd_emu10k1.c  snd_emu8k.c  snd_speaker.c  sound.c
src/unix/: CMakeLists.txt  unix.c
src/utils/: log.c
src/video/: vid_8514a.c  vid_ati18800.c  vid_ati28800.c  vid_ati_mach64.c  vid_bt48x_ramdac.c  vid_cga.c  vid_cga_comp.c  vid_cl54xx.c  vid_colorplus.c  vid_compaq_cga.c  vid_ega.c  vid_ega_render.c  vid_et4000.c  vid_et4000w32.c  vid_f82c425.c  vid_genius.c  vid_hercules.c  vid_herculesplus.c  vid_ht216.c  vid_ibm_rgb528_ramdac.c  vid_im1024.c  vid_incolor.c  vid_mda.c  vid_mga.c  vid_nga.c  vid_oak_oti.c  vid_ogc.c  vid_paradise.c  vid_pgc.c  vid_rtg310x.c  vid_s3.c  vid_s3_virge.c  vid_sigma.c  (+15 more)
(+18 files in other folders)
